--- a/elements/WrappedBaseballBat.mod.json
+++ b/elements/WrappedBaseballBat.mod.json
@@ -2,36 +2,36 @@
   "_fv": 66,
   "_type": "tool",
   "definition": {
-    "toolType": "Axe",
+    "toolType": "Sword",
     "renderType": 0,
     "blockingRenderType": 0,
-    "texture": "hatchet",
+    "texture": "wrappedbaseballbat",
     "customModelName": "Normal",
     "blockingModelName": "Normal blocking",
-    "name": "Hatchet",
+    "name": "Wrapped Baseball Bat",
     "specialInformation": {
       "fixedValue": []
     },
     "creativeTabs": [
       {
-        "value": "TOOLS"
+        "value": "COMBAT"
       }
     ],
-    "efficiency": 5.0,
-    "attackSpeed": 1.0999999999999999,
+    "efficiency": 2.0,
+    "attackSpeed": 1.7999999999999998,
     "enchantability": 2,
-    "damageVsEntity": 7.0,
-    "usageCount": 200,
+    "damageVsEntity": 5.0,
+    "usageCount": 300,
     "glowCondition": {
       "fixedValue": false
     },
     "repairItems": [
       {
-        "value": "Items.IRON_INGOT"
+        "value": "Blocks.PLANKS"
       }
     ],
     "immuneToFire": false,
-    "blockDropsTier": "STONE",
+    "blockDropsTier": "WOOD",
     "blocksAffected": [],
     "stayInGridWhenCrafting": false,
     "damageOnCrafting": false
